responsivity fixed on tablets

--- a/src/App.css
+++ b/src/App.css
@@ -205,11 +205,11 @@ img{
 
 #hints button{
   background-color: rgb(59,132,39);
-  border-top: 4px solid rgb(101,157,80);
-  border-right: 4px solid rgb(28,63,19);
-  border-bottom: 4px solid rgb(22,79,14);
-  border-left: 4px solid rgb(66,115,52);
-  padding: 2vmin;
+  border-top: 1vmin solid rgb(101,157,80);
+  border-right: 1vmin solid rgb(28,63,19);
+  border-bottom: 1vmin solid rgb(22,79,14);
+  border-left: 1vmin solid rgb(66,115,52);
+  padding: 1vmin;
   color: white;
   width: 100%;
   height: 100%;
@@ -219,10 +219,10 @@ img{
 
 #hints button:hover, #achievementButton:hover{
   background-color: rgb(53, 113, 36);
-  border-top: 4px solid rgb(93, 144, 74);
-  border-right: 4px solid rgb(25, 56, 17);
-  border-bottom: 4px solid rgb(19, 71, 13);
-  border-left: 4px solid rgb(54, 95, 43);
+  border-top: 1vmin solid rgb(93, 144, 74);
+  border-right: 1vmin solid rgb(25, 56, 17);
+  border-bottom: 1vmin solid rgb(19, 71, 13);
+  border-left: 1vmin solid rgb(54, 95, 43);
   color: rgb(219, 219, 219);
 }
 
@@ -377,13 +377,22 @@ table .correct{
     justify-content: center;
   }
 
+  #craftingTable{
+    padding: 0;
+  }
+
   #craftingTitle{
     font-size: 5vw;
   }
 
-  #craftingTable td, #item, .itemSlot{
-    width: 10vw;
-    height: 10vw;
+  #craftingTable td, #item{
+    width: 8vmin;
+    height: 8vmin;
+  }
+
+  .itemSlot{
+    width: 5vmin;
+    height: 5vmin;
   }
 
   #hints button{
@@ -399,8 +408,8 @@ table .correct{
   }
 
   .tipCrafting td, .tippedItem{
-    width: 10vmin;
-    height: 10vmin;
+    width: 6vmin;
+    height: 6vmin;
   }
 
   #achievement{
